# pact-protobuf-plugin

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  pact-plugin.json  release.groovy  release.sh
.github/workflows/: build.yml  issue-comment-created.yml  release.yml
integrated_tests/default_values/: Cargo.toml  build.rs  default_value.proto
integrated_tests/default_values/src/: lib.rs
integrated_tests/imported_message/: Cargo.toml  build.rs
integrated_tests/imported_message/imported/: imported.proto
integrated_tests/imported_message/primary/: primary.proto  rectangle.proto  request.proto  service.proto
integrated_tests/imported_message/src/: lib.rs
integrated_tests/imported_message/zimported/: zimported.proto
integrated_tests/imported_message_same_package_multiple_files/: Cargo.toml  build.rs
integrated_tests/imported_message_same_package_multiple_files/imported/: imported.proto
integrated_tests/imported_message_same_package_multiple_files/primary/: rectangle.proto  request.proto  response.proto  service.proto
integrated_tests/imported_message_same_package_multiple_files/src/: lib.rs
integrated_tests/imported_message_same_package_multiple_files/zimported/: zimported.proto
integrated_tests/imported_without_package/: Cargo.toml  build.rs
integrated_tests/imported_without_package/imported/: imported.proto
integrated_tests/imported_without_package/no_package/: tag.proto
integrated_tests/imported_without_package/primary/: service.proto
integrated_tests/imported_without_package/src/: lib.rs
integrated_tests/matching_maps/: Cargo.toml  build.rs  matching_maps.proto
integrated_tests/matching_maps/src/: lib.rs
integrated_tests/mockserver_issue_228/: list_appender.proto
integrated_tests/mockserver_issue_228/consumer/: Cargo.toml  build.rs
integrated_tests/mockserver_issue_228/consumer/src/: lib.rs
integrated_tests/nested_messages/: Cargo.toml  build.rs  sample.proto
integrated_tests/nested_messages/src/: lib.rs
integrated_tests/new_fields/: new_fields.proto  new_fields_2.proto
integrated_tests/new_fields/consumer/: Cargo.toml  build.rs
integrated_tests/new_fields/consumer/src/: lib.rs
integrated_tests/new_fields/new_provider/: Cargo.toml  build.rs
integrated_tests/new_fields/new_provider/src/: main.rs
integrated_tests/new_fields/old_provider/: Cargo.toml  build.rs
integrated_tests/new_fields/old_provider/src/: main.rs
integrated_tests/repeated_enum_issue_197/: repeated_enum.proto
integrated_tests/repeated_enum_issue_197/consumer/: Cargo.toml  build.rs
integrated_tests/repeated_enum_issue_197/consumer/src/: lib.rs
integrated_tests/repeated_enum_issue_197/provider/: Cargo.toml  build.rs
integrated_tests/repeated_enum_issue_197/provider/src/: main.rs
integrated_tests/repeated_enums/: Cargo.toml  build.rs  repeated_enum.proto
integrated_tests/repeated_enums/src/: lib.rs
integrated_tests/response_metadata/: Cargo.toml  build.rs  response_metadata.proto
integrated_tests/response_metadata/pacts/: grpc-consumer-rust-response_metadata.json
integrated_tests/response_metadata/src/: lib.rs
scripts/: gzip-and-sum.sh  install-plugin.sh  musl-build.sh
src/: dynamic_message.rs  lib.rs  main.rs  matching.rs  message_builder.rs  message_decoder.rs  metadata.rs  mock_server.rs  mock_service.rs  proto.rs  protobuf.rs  protoc.rs  server.rs  tcp.rs  utils.rs  verification.rs
src/message_decoder/: generators.rs  mod.rs
src/protobuf/: mod.rs
src/protobuf/tests/: build_field_value_tests.rs  mod.rs
tests/: basic_values.proto  basic_values_test.rs  each_value.proto  each_value_tests.rs  enum.proto  enum_imported.proto  enum_tests.rs  from_provider_state_generator.proto  from_provider_state_generator_tests.rs  mock_server_tests.rs  pact_verify.rs  simple.proto
