[workspace]

members = [
    ".",
    "integrated_tests/response_metadata",
    "integrated_tests/repeated_enums",
    "integrated_tests/default_values",
    "integrated_tests/matching_maps",
]

[package]
name = "pact-protobuf-plugin"
version = "0.3.15"
edition = "2021"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
description = "Pact plugin for Protobufs and gRPC"
homepage = "http://www.pactflow.io"
repository = "https://github.com/pactflow/pact-protobuf-plugin"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.71"
async-trait = "0.1.68"
base64 = "0.21.2"
bytes = "1.4.0"
clap = { version = "4.5.4", features = ["cargo", "env"] }
chrono = { version = "0.4.26", features = ["std", "clock"], default_features = false }
futures = "0.3.28"
http = "0.2.11"
http-body = "0.4.6"
hyper = { version = "0.14.28", features = [ "full" ] }
itertools = "0.12.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
md5 = "0.7.0"
num = "0.4.1"
os_info = "3.7.0"
pact_matching = "~1.2.1"
pact_models = "~1.1.18"
pact-plugin-driver = "~0.6.0"
pact_verifier = "~1.2.0"
prost = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
rand_regex = "0.17.0"
regex = "1.8.3"
regex-syntax = "0.8.3"
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json", "gzip", "deflate"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tempfile = "3.10.0"
tonic = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = [ "full" ] }
tower-http = { version = "0.4.0", features = [ "full" ] }
tower-service = { version = "0.3.2" }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "tracing-log"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
uuid = { version = "1.7.0", features = ["v4"] }
zip = "0.6.6"

# 0.1.29 fails on Alpine with: cannot find function `preadv2` in crate `libc`
jobserver = "=0.1.28"

[dev-dependencies]
env_logger = "0.11.1"
expectest = "0.12"
home = "0.5.5"
pact_consumer = "~1.2.0"
panic-message = "0.3.0"
pretty_assertions = "1.3.0"
rocket = "0.5.0"
rstest = "0.18.2"
serde = "1.0.163"
test-log = "0.2.11"
trim-margin = "0.1.0"

[build-dependencies]
built = { version = "0.7.1", features = [ "git2" ] }
os_info = "3.7.0"
