[workspace]

members = [
    ".",
    "integrated_tests/response_metadata",
    "integrated_tests/repeated_enums",
    "integrated_tests/default_values",
    "integrated_tests/matching_maps",
    "integrated_tests/imported_message",
    "integrated_tests/imported_message_same_package_multiple_files",
    "integrated_tests/imported_without_package",
]

[package]
name = "pact-protobuf-plugin"
version = "0.5.1"
edition = "2021"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
description = "Pact plugin for Protobufs and gRPC"
homepage = "http://www.pactflow.io"
repository = "https://github.com/pactflow/pact-protobuf-plugin"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.86"
async-trait = "0.1.81"
base64 = "0.22.1"
bytes = "1.6.1"
clap = { version = "4.5.9", features = ["cargo", "env"] }
chrono = { version = "0.4.28", features = ["std", "clock"], default-features = false }
futures = "0.3.30"
http = "1.1.0"
http-body = "1.0.1"
hyper = { version = "1.4.1", features = [ "full" ] }
hyper-util = { version = "0.1.6", features = ["full"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
md5 = "0.7.0"
num = "0.4.3"
os_info = "3.8.2"
pact_matching = "~1.2.6"
pact_models = "~1.2.4"
pact-plugin-driver = "~0.7.0"
pact_verifier = "~1.2.4"
prost = "0.13.1"
prost-types = "0.13.1"
rand = "0.8.5"
rand_regex = "0.17.0"
regex = "1.10.5"
regex-syntax = "0.8.4"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json", "gzip", "deflate"] }
serde_json = "1.0.120"
tempfile = "3.10.1"
tonic = "0.12.1"
tokio = { version = "1.38.1", features = ["full"] }
tower = { version = "0.4.13", features = [ "full" ] }
tower-http = { version = "0.5.2", features = [ "full" ] }
tower-service = { version = "0.3.2" }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "tracing-log"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
uuid = { version = "1.10.0", features = ["v4"] }
zip = "2.1.3"

[dev-dependencies]
env_logger = "0.11.3"
expectest = "0.12.0"
home = "0.5.9"
pact_consumer = "~1.3.0"
panic-message = "0.3.0"
pretty_assertions = "1.4.0"
rocket = "0.5.1"
rstest = "0.22.0"
serde = "1.0.204"
test-log = "0.2.16"
trim-margin = "0.1.0"

[build-dependencies]
built = { version = "0.7.4", features = [ "git2" ] }
os_info = "3.8.2"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
