[package]
name = "matching_maps"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.43"
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tracing = { version = "0.1", features = [ "log-always" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.1"
pact-plugin-driver = "0.5.1"
pact_consumer = "1.1.1"
pact_models = "1.1.18"
serde_json = "1.0.113"
maplit = "1.0.2"

[build-dependencies]
tonic-build = "0.10.2"
