[package]
name = "repeated_enums"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.43"
tonic = "0.8.3"
prost = "0.11.9"
prost-types = "0.11.9"
tracing = { version = "0.1", features = [ "log-always" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.10.1"
pact-plugin-driver = "0.4.6"
pact_consumer = "1.0.5"
serde_json = "1.0.66"
maplit = "1.0.2"

[build-dependencies]
tonic-build = "0.8.4"
