[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1", features = ["full"] }
tonic = "0.13.1"
tracing = "0.1"

[dev-dependencies]
expectest = "0.12.0"
maplit = "1.0.2"
pact_consumer = "1.4.1"
pact-plugin-driver = "0.7.5"
serde_json = "1.0.140"
test-log = { version = "0.2.17", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13.1"
