[workspace]

[package]
name = "new_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
fake = "2.9.2"
prost = "0.13.1"
prost-types = "0.13.1"
regex = "1.10.5"
tokio = { version = "1.38.1", features = ["full"] }
tonic = "0.13.0"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "tracing-log"] }

[dev-dependencies]
test-log = "0.2.15"

[build-dependencies]
tonic-build = "0.12.1"
