[package]
name    = "new_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
fake = "4.0.0"
prost = "0.13.1"
tokio = { version = "1.38.1", features = ["full"] }
tonic = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
    "tracing-log",
] }

[dev-dependencies]
test-log = "0.2.15"

[build-dependencies]
tonic-build = "0.12.1"
